2008-07-25  Dean Brettle <dean@brettle.com>

	* HtmlControl.cs (PreProcessRelativeReference), 
	HtmlForm.cs (RenderAttributes), HtmlInputButton (RenderAttributes),
	HtmlInputRadioButton (RenderAttributes), HtmlSelect (RenderChildren):
	Encode attributes that could contain HTML special chars.
	
	* HtmlSelect (RenderChildren): HTML-encode option text.

2008-06-30  Marek Habersack  <mhabersack@novell.com>

	* HtmlForm.cs: hush the warnings

2008-06-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* HtmlAnchor.cs: Do not render empty name, target or title attribute.
	Removed extra check for target attribute in RenderAttributes. Use
	string.Empty instead of "", and check string's Length instead of
	comparison with "" or string.Empty. Minor code formatting.

2008-06-04  Juraj Skripksy  <js@hotfeet.ch>

	* HtmlAnchor.cs (Render): Add missing call to
	ClientScriptManager.RegisterForEventValidation. Fixes bug #397142.

2008-06-04  Juraj Skripsky  <js@hotfeet.ch>

	* HtmlAnchor.cs: Do not render an empty href attribute.
	Fixes bug #397046.

2008-02-13  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HtmlForm.cs: fixed action attribute in RenderAttributes under
	TARGET_JVM

2008-02-06  Marek Habersack  <mhabersack@novell.com>

	* HtmlMeta.cs: render XHTML compliant tag if not in the Legacy
	mode. Fixes bug #354425

2008-01-17 Igor Zelmanovich  <igorz@mainsoft.com>

	* HtmlSelect.cs: refactoring. 

2008-01-17 Igor Zelmanovich  <igorz@mainsoft.com>

	* HtmlSelect.cs: fix databinding (only 2.0), state management. 

2008-01-14  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlSelect.cs: Fix infinite recursion (only in 2.0) found using 
	Gendarme.

2007-01-07 Igor Zelmanovich  <igorz@mainsoft.com>

	* HtmlForm.cs: refactoring.

2007-12-13  Marek Habersack  <mhabersack@novell.com>

	* HtmlForm.cs, HtmlButton.cs: speed optimization - use String.Concat
	instead of String.Format in some cases.

2007-11-07  Juraj Skripsky  <js@hotfeet.ch>
