@@ -1,3 +1,8 @@
+2008-08-29  Marek Habersack  <mhabersack@novell.com>
+
+	* HtmlHead.cs: call base.OnInit ()
+	If Page is null, throw an exception.
+
 2008-07-25  Dean Brettle <dean@brettle.com>
 
 	* HtmlControl.cs (PreProcessRelativeReference), 
